--- a/Analysis_Notebooks/download_data.ipynb
+++ b/Analysis_Notebooks/download_data.ipynb
@@ -21,7 +21,7 @@
      "source": [
       "####Notebook Summary\n",
       "\n",
-      "Here we are downloading and processing most of the necissary data to run this analysis pipeline. I have set up a series of scripts to do this in an automated fashon in order to allow for reproduction of this study by others as well as for updating the results obtained here as more TCGA data is collected and reseased.  \n",
+      "Here we are downloading and processing most of the necessary data to run this analysis pipeline. I have set up a series of scripts to do this in an automated fashon in order to allow for reproduction of this study by others as well as for updating the results obtained here as more TCGA data is collected and reseased.  \n",
       "\n",
       "Downloading this data can take a considerable amount of time (~5 hours) and disk space (~45GB), be prepared.  \n",
       "\n",
